# MCT-daemon

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.md  mct-config.cmake.in
cmake/: CMakeLists.txt  config.h.cmake  dlt_version.h.cmake  mct_version.h.cmake
doc/: CMakeLists.txt  mct-daemon.md  mct-glossary.md  mct-log-converter.md  mct-log-reader.md  mct-log-writer.md  mct-logstorage-ctrl.md  mct.conf.md  mct_build_options.md  mct_demo_setup.md
include/: CMakeLists.txt
include/dlt/: CMakeLists.txt  dlt_client.h  dlt_common.h  dlt_protocol.h  dlt_types.h  dlt_user.h.in  dlt_user_macros.h
include/mct/: CMakeLists.txt  mct.h  mct_client.h  mct_common.h  mct_common_api.h  mct_offline_trace.h  mct_protocol.h  mct_publisher.h  mct_subscriber.h  mct_types.h  mct_user.h.in  mct_user_macros.h
src/: CMakeLists.txt
src/console/: CMakeLists.txt  dlt-receive.c  mct-control-common.c  mct-control-common.h  mct-log-converter.c  mct-log-reader.c  mct-sortbytimestamp.c  mct-subscriber.c
src/console/logkeeper-ctrl/: CMakeLists.txt
src/console/logstorage/: CMakeLists.txt  dlt-logstorage-common.c  dlt-logstorage-ctrl.c  dlt-logstorage-prop.c  mct-logstorage-common.c  mct-logstorage-common.h  mct-logstorage-ctrl.c  mct-logstorage-ctrl.h  mct-logstorage-list.c  mct-logstorage-list.h  mct-logstorage-prop.c  mct-logstorage-prop.h  mct-logstorage-udev.c  mct-logstorage-udev.h
src/daemon/: CMakeLists.txt  dlt-daemon.c  dlt-daemon.h  dlt.conf.in  dlt_daemon_client.c  dlt_daemon_client.h  dlt_daemon_common.c  dlt_daemon_common.h  dlt_daemon_connection.c  dlt_daemon_connection_types.h  dlt_daemon_event_handler.c  dlt_daemon_event_handler.h  dlt_daemon_filter.c  dlt_daemon_filter.h  dlt_daemon_filter_backend.c  dlt_daemon_filter_backend.h  dlt_daemon_filter_internal.h  dlt_daemon_filter_types.h  dlt_daemon_offline_logstorage.c  dlt_daemon_offline_logstorage.h  dlt_daemon_unix_socket.c  dlt_message_filter.conf  mct-daemon.c  mct-daemon.h  mct-daemon_cfg.h  mct.conf.in  mct_daemon_client.c  mct_daemon_client.h  mct_daemon_common.c  mct_daemon_common.h  mct_daemon_common_cfg.h  mct_daemon_connection.c  mct_daemon_connection.h  mct_daemon_connection_types.h  mct_daemon_event_handler.c  mct_daemon_event_handler.h  mct_daemon_event_handler_types.h  mct_daemon_filter.c  mct_daemon_filter.h  mct_daemon_filter_backend.c  (+13 more)
src/examples/: CMakeLists.txt  dlt-example-user.c
src/lib/: CMakeLists.txt  dlt_client.c  dlt_user.c  dlt_user_cfg.h  dlt_user_hp.c  mct_client.c  mct_client_cfg.h  mct_env_ll.c  mct_user.c  mct_user_cfg.h  mct_user_hp.c
src/offlinelogstorage/: dlt_offline_logstorage.c  dlt_offline_logstorage.h  dlt_offline_logstorage_behavior.c  dlt_offline_logstorage_behavior_internal.h  dlt_offline_logstorage_internal.h  mct_offline_logstorage.c  mct_offline_logstorage.h  mct_offline_logstorage_behavior.c  mct_offline_logstorage_behavior.h  mct_offline_logstorage_behavior_internal.h  mct_offline_logstorage_internal.h
src/shared/: dlt_common.c  dlt_config_file_parser.c  dlt_offline_trace.c  dlt_protocol.c  dlt_user_shared.h  dlt_user_shared_cfg.h  mct_common.c  mct_common_cfg.h  mct_config_file_parser.c  mct_config_file_parser.h  mct_offline_trace.c  mct_protocol.c  mct_user_shared.c  mct_user_shared.h  mct_user_shared_cfg.h
src/writer/: CMakeLists.txt  mct-log-writer.c
